[gd_scene load_steps=6 format=3 uid="uid://dl02wrbq4cv2l"]

[ext_resource type="Script" uid="uid://mmrfu0moui5f" path="res://Menu/Main/main.gd" id="1_rv483"]
[ext_resource type="Texture2D" uid="uid://cqqbv00yp7hu5" path="res://Menu/Main/bestia_logo.png" id="2_3d38s"]
[ext_resource type="PackedScene" uid="uid://cw0vrhad75kej" path="res://Menu/Main/Background/Background.tscn" id="2_sevqj"]
[ext_resource type="Texture2D" uid="uid://byosbcjv3p4jw" path="res://Menu/Main/build-on-ethereum.webp" id="4_k6b14"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6b14"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0.77254903)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rv483")

[node name="Background" parent="." instance=ExtResource("2_sevqj")]
layout_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k6b14")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="BestiaLogo" type="TextureRect" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_3d38s")
expand_mode = 4
stretch_mode = 4

[node name="VersionLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.59717613, 0.59717613, 0.5971761, 1)
theme_override_font_sizes/font_size = 12
text = "VERSION"
horizontal_alignment = 2

[node name="PlayButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="BuildOnEth" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.999998
offset_top = -94.0
offset_right = 1106.0
offset_bottom = 454.0
grow_vertical = 0
scale = Vector2(0.10854577, 0.10854577)
texture = ExtResource("4_k6b14")

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
